--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
     gtag('config', 'UA-2320532-12');
   </script>
 
-  <title>Wealth, shown to scale</title>
+  <title>Riqueza, mostrada a escala</title>
   <meta name="description" content="Inequality in the United States is out of control. Here we visualize the issue in a unique way." />
 
   <meta name="twitter:card" content="summary_large_image">
   <meta name="twitter:site" content="@mkorostoff">
   <meta name="twitter:creator" content="@mkorostoff">
-  <meta name="twitter:title" content="Wealth, shown to scale">
+  <meta name="twitter:title" content="Riqueza, mostrada a escala">
   <meta name="twitter:description" content="Inequality in the United States is out of control. Here we visualize the issue in a unique way.">
   <meta name="twitter:image" content="https://mkorostoff.github.io/1-pixel-wealth/img/off-the-chart.png">
 
-  <meta property="og:title" content="Wealth, shown to scale" />
+  <meta property="og:title" content="Riqueza, mostrada a escala" />
   <meta property="og:type" content="website" />
   <meta property="og:description" content="Wealth inequality in the United States is out of control. Here we visualize the issue in a unique way." />
   <meta property="og:image" content="https://mkorostoff.github.io/1-pixel-wealth/img/off-the-chart.png" />
@@ -32,7 +32,7 @@
   <div class="wealth-wrapper-outer">
     <div class=wealth-row wealth-row-one>
       <div class="title-screen">
-        <h1>Wealth shown to scale</h1>
+        <h1>Riqueza mostrada a escala</h1>
         <div class="scroll-this-way">scroll</div>
       </div>
       <div class="wealth-wrapper">
@@ -46,28 +46,28 @@
       </div>
 
       <div class="wealth-wrapper median">
-        <h2 class="wealth-title">$63,179 (Median US household income)</h2>
+        <h2 class="wealth-title">$63.179 USD (Ingreso familiar promedio en EEUU)</h2>
         <div class="wealth"></div>
       </div>
 
       <div class="wealth-wrapper million">
-        <h2 class="wealth-title">$1 million</h2>
+        <h2 class="wealth-title">$1 millón USD</h2>
         <div class="wealth"></div>
       </div>
 
 
       <div class="wealth-wrapper billion">
         <div class="wealth">
-          <h2 class="wealth-title">$1 billion</h2>
+          <h2 class="wealth-title">$1000 millones USD</h2>
         </div>
       </div>
 
       <div name="bezos" class="wealth-wrapper bezos">
         <div id="bezos" class="wealth ruler">
-          <h2 class="wealth-title">$139 billion (wealth of Jeff Bezos)</h2>
+          <h2 class="wealth-title">$139.000 millones USD (Riqueza de Jeff Bezos)</h2>
           <div class="counter" id="bezos-counter"></div>
           <div class="key">
-            <span>$80 million</span>
+            <span>$80 millones USD</span>
           </div>
 
           <div class="text-infobox infobox first">
