--- a/index.html
+++ b/index.html
@@ -46,28 +46,28 @@
       </div>
 
       <div class="wealth-wrapper median">
-        <h2 class="wealth-title">$63.179 USD (Ingreso familiar promedio en EEUU)</h2>
+        <h2 class="wealth-title">$63.179 dólares (Ingreso familiar promedio en EEUU)</h2>
         <div class="wealth"></div>
       </div>
 
       <div class="wealth-wrapper million">
-        <h2 class="wealth-title">$1 millón USD</h2>
+        <h2 class="wealth-title">$1 millón de dólares</h2>
         <div class="wealth"></div>
       </div>
 
 
       <div class="wealth-wrapper billion">
         <div class="wealth">
-          <h2 class="wealth-title">$1000 millones USD</h2>
+          <h2 class="wealth-title">$1000 millones de dólares</h2>
         </div>
       </div>
 
       <div name="bezos" class="wealth-wrapper bezos">
         <div id="bezos" class="wealth ruler">
-          <h2 class="wealth-title">$139.000 millones USD (Riqueza de Jeff Bezos)</h2>
+          <h2 class="wealth-title">$139.000 millones de dólares (Riqueza de Jeff Bezos)</h2>
           <div class="counter" id="bezos-counter"></div>
           <div class="key">
-            <span>$80 millones USD</span>
+            <span>$80 millones de dólares</span>
           </div>
 
           <div class="text-infobox infobox first">
