--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <div class=wealth-row wealth-row-one>
       <div class="title-screen">
         <h1>Riqueza mostrada a escala</h1>
-        <div class="scroll-this-way">scroll</div>
+        <div class="scroll-this-way">desplasarze</div>
       </div>
       <div class="wealth-wrapper">
         <h2 class="wealth-title">$1,000</h2>
