Add more translations.

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         <div class="scroll-this-way">desplasarze</div>
       </div>
       <div class="wealth-wrapper">
-        <h2 class="wealth-title">$1,000</h2>
+        <h2 class="wealth-title">$1.000</h2>
         <div class="wealth one-thousand"></div>
         <div class="arrow">
           <svg viewBox="668 -8 14 70" width="14" height="70">
@@ -71,56 +71,60 @@
           </div>
 
           <div class="text-infobox infobox first">
-            <div class="title">Jeff is so wealthy, that it is quite literally unimaginable.</div>
+            <div class="title">Jeff es tan rico, que es literalmente inimaginable.</div>
           </div>
 
           <div class="text-infobox infobox">
-            <div class="title">We rarely see wealth inequality represented to scale. This is part of the reason Americans <a href="https://www.ncbi.nlm.nih.gov/pubmed/26162108" target="_blank">consistently under-estimate</a> the relative wealth of the super rich.</div>
+            <div class="title">Raramente vemos la desigualdad de
+              riqueza representada a escala. Esta es parte de la razón
+              por la cual los estadounidenses <a href="https://www.ncbi.nlm.nih.gov/pubmed/26162108" target="_blank">subestiman constantemente</a> la
+              riqueza relativa de los súper ricos.
+            </div>
           </div>
 
           <div class="five-pixels text-infobox infobox-half infobox">
-            <div class="title">Every 10 pixels you scroll is $5 million.</div>
+            <div class="title">Cada 10 pixeles de tu desplazamiento equivalen a $5 millones de dólares.</div>
           </div>
 
           <div class="coming-up text-infobox infobox">
-            <div class="title">OK, we're coming up on the end now.</div>
+            <div class="title">OK, estamos llegando al final ahora.</div>
           </div>
 
           <div class="text-infobox infobox">
             <div id="bezos-counter-start" class="title">
-              <p>Lol, just kidding, we're about &#8531; of the way. Keep scrolling though, there's more to see.</p>
+              <p>Jaja!, es broma, estamos a &#8531; del camino. Sigue desplazándote, hay más para ver.</p>
             </div>
           </div>
 
 
           <div class="text-infobox infobox infobox-half">
-            <div class="title">Let's put this wealth in perspective by comparing it to some familiar things.</div>
+            <div class="title">Pongamos esta riqueza en perspectiva comparándola con algunas cosas que te sean familiares.</div>
           </div>
 
           <div class="infobox infobox-half lifetime">
             <div class="title-square-wrapper">
-              <div class="title">All the money you will ever earn in your entire life from the day you are born until the day you die (about $1.7 million)</div>
+              <div class="title">Todo el dinero que ganarás en toda tu vida desde el día en que naciste hasta el día en que mueras (alrededor de $ 1,7 millones de dólares)</div>
               <div class="square"></div>
             </div>
           </div>
 
           <div class="infobox infobox-half healthcare">
             <div class="title-square-wrapper">
-              <div class="title">Annual cost of health care for a family of four</div>
+              <div class="title">Costo anual de atención médica para una familia estadounidense de cuatro personas.</div>
               <div class="square"></div>
             </div>
           </div>
 
           <div class="infobox infobox-half amazon-year">
             <div class="title-square-wrapper">
-              <div class="title">Annual pay of amazon warehouse worker.</div>
+              <div class="title">Pago anual de un trabajador de bodega de Amazon.</div>
               <div class="square"></div>
             </div>
           </div>
 
           <div class="infobox infobox-half year-veteran">
             <div class="square shadow">
-              <div class="title">Annual cost to house every single homeless veteran.</div>
+              <div class="title">Costo anual para albergar a todos los veteranos sin hogar.</div>
             </div>
           </div>
 
