--- a/index.html
+++ b/index.html
@@ -438,12 +438,13 @@
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>Around 800 children will die of malaria today. A small group of super rich people could stop it for a sum of money so small that they would likely never even notice its absence. But they choose not to.</p>
+            <p> Alrededor de 800 niños morirán de malaria hoy. Un pequeño grupo de personas súper ricas podría detenerlo por una suma de dinero tan pequeña que probablemente ni siquiera notarían su ausencia. Pero ellos eligen no hacerlo.
+</p>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-half">
-          <h2 class="title what-could-we-do">What could we do with 5% of this money?</h2>
+          <h2 class="title what-could-we-do">¿Qué podríamos hacer con el 5% de este dinero?</h2>
         </div>
 
         <div class="infobox infobox-quarter flex">
@@ -454,20 +455,30 @@
             <span class="label">5.1%</span>
             <div class="dotted-line"></div>
             <div class="description">
-              <h2>Provide $1,200 to every American household.</h2>
+              <h2>Proporcionar $1.200 dólares a cada hogar estadounidense.</h2>
             </div>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>The recent coronavirus stimulus was the largest ever passed by congress. It was financed entirely through deficit spending, which will be repaid by taxpayers for generations. The burden of repaying this debt could be erased in an instant with a tax on the super rich so small that they would not even feel it.</p>
+            <p>El reciente estímulo de coronavirus fue el más grande
+            jamás aprobado por el Congreso. Fue financiado en su
+            totalidad a través del gasto deficitario, que será pagado
+            por los contribuyentes por generaciones. La carga de pagar
+            esta deuda podría borrarse en un instante con un impuesto
+            sobre los súper ricos tan pequeño que ni siquiera lo
+            sentirían.
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>The wealth of 400 Americans could have financed the entire CARES act, including the corporate bailouts, expanded unemployment, and expanded testing&#8212;with nearly a trillion dollars left over.</p>
+            <p>La riqueza de 400 estadounidenses podría haber
+            financiado toda la ley CARES (The Coronavirus Aid, Relief,
+            and Economic Security), incluidos los rescates
+            corporativos, el aumento del desempleo y el aumento de
+            pruebas, con casi un billón de dólares sobrantes.
           </div>
         </div>
 
