--- a/index.html
+++ b/index.html
@@ -490,7 +490,7 @@
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>Instead, the American tax payer will be stuck with the bill.</p>
+            <p>En cambio, el contribuyente estadounidense se quedará atrapado con sus facturas.</p>
           </div>
         </div>
 
@@ -502,14 +502,20 @@
             <span class="label">5.7%</span>
             <div class="dotted-line"></div>
             <div class="description">
-              <h2>Lift every American out of poverty.</h2>
+              <h2>Sacar a todos los estadounidenses de la pobreza.</h2>
             </div>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            As of 2019, around 38 million Americans lived in poverty. If Americans in poverty were a state, they would be second largest by population. There are more Americans living in poverty than the entire population of Canada. There are likely millions more newly impoverished as a result of coronavirus, but those numbers are not fully known yet.
+            En el 2019, alrededor de 38 millones de estadounidenses vivían en la pobreza. Si
+            los estadounidenses en la pobreza fueran un estado, serían
+            el segundo más grandes por población. Hay más
+            estadounidenses viviendo en la pobreza que toda la
+            población de Canadá. Es probable que haya millones más
+            recientemente empobrecidos como resultado del coronavirus,
+            pero esos números aún no se conocen por completo.
           </div>
         </div>
 
@@ -522,32 +528,67 @@
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p><a href="https://www.census.gov/content/dam/Census/library/publications/2019/demo/p60-266.pdf" target="_blank">Every single person</a> in America could be lifted above the poverty line with a one-time cash subsidy of around $10,000 per impoverished family (and about $7,000 for impoverished individuals). The total cost would be $170 billion, a little over 5% of the wealth currently controlled by 400 individuals.</p>
+            <p><a href="https://www.census.gov/content/dam/Census/library/publications/2019/demo/p60-266.pdf" target="_blank">Cada persona</a> en
+            Estados Unidos podría elevarse por encima de la línea de
+            pobreza con un subsidio en efectivo por única vez de
+            alrededor de $ 10.000 dólares por familia empobrecida (y
+            alrededor de $ 7.000 dólares para personas
+            empobrecidas). El costo total sería de $170 mil millones
+            de dólares, un poco más del 5% de la riqueza actualmente
+            controlada por 400 individuos.
+            </p>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>It may seem counter intuitive that a one-time subsidy could have any lasting impact on chronic poverty. But one of the surprising truths about poverty is that it's fluid. Americans move in and out of poverty many times throughout their lives, and one good year can have a massive and long lasting effect.</p>
-
-              <p>A wealth of data now supports the idea that <a href="https://www.givedirectly.org/research-on-cash-transfers/" target="_blank">one-time cash transfers can permanently transform a local economy.</a> Given a sudden windfall, people invest in their future. They go back to school, obtain transportation, pay for childcare, pay down debilitating debts, and do any number of things to improve their career prospects and financial future.</p>
+            <p>Puede parecer contrario a la intuición que un subsidio
+            único podría tener un impacto duradero en la pobreza
+            crónica. Pero una de las verdades sorprendentes sobre la
+            pobreza es que es fluida. Los estadounidenses entran y
+            salen de la pobreza muchas veces a lo largo de sus vidas,
+            y un buen año puede tener un efecto masivo y duradero.
+            </p>
+            <p> Una gran cantidad de datos ahora respalda la idea de
+              que <a href="https://www.givedirectly.org/research-on-cash-transfers/" target="_blank">las transferencias de efectivo de una sola vez pueden
+            transformar permanentemente una economía local. </a>Dada una
+            inesperada ganancia, las personas invierten en su
+            futuro. Vuelven a la escuela, obtienen transporte, pagan
+            el cuidado de niños, pagan deudas debilitantes y hacen
+            cualquier cantidad de cosas para mejorar sus perspectivas
+            profesionales y su futuro financiero.</p>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>In the US, for all of the people that escape poverty in any given year, <a href="https://poverty.ucdavis.edu/sites/main/files/file-attachments/stevens_1994aerpp.pdf" target="_blank">about half stay out of poverty for at least five years afterwards</a>. About a third are still out of poverty ten years later.</p>
+            <p>En los Estados Unidos, las personas que escapan de la
+              pobreza en un año determinado, <a href="https://poverty.ucdavis.edu/sites/main/files/file-attachments/stevens_1994aerpp.pdf" target="_blank">aproximadamente la mitad
+            permanece fuera de la pobreza durante al menos cinco años
+            después</a>. Aproximadamente un tercio todavía está fuera de
+            la pobreza diez años después.
+              </p>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>This would not be a permanent fix for all Americans. Surely, some would quickly return to poverty, and others face debts so large that the subsidy would make little difference. But for tens of millions of Americans, this would be a life changing event. It would be a generation defining social program that reshapes our economy for decades to come.</p>
+            <p>Esto no sería una solución permanente para todos los
+            estadounidenses. Seguramente, algunos regresarían
+            rápidamente a la pobreza, y otros enfrentarían deudas tan
+            grandes que el subsidio haría poca diferencia. Pero para
+            decenas de millones de estadounidenses, este sería un
+            evento que les cambiaría la vida. Sería una generación que
+            define un programa social que reestructura nuestra
+            economía en las próximas décadas.
+
+
+</p>
           </div>
        </div>
 
        <div class="infobox text-infobox infobox-half">
-         <h2 class="title what-could-we-do">What could we do with 6% of this money?</h2>
+         <h2 class="title what-could-we-do">¿Qué podríamos hacer con el 6% de este dinero?</h2>
        </div>
 
        <div class="infobox infobox-quarter flex">
@@ -558,19 +599,20 @@
            <span class="label">6%</span>
            <div class="dotted-line"></div>
            <div class="description">
-             <h2>Refund 2018 taxes for all households earning under $80,000</h2>
+             <h2>Reembolsar impuestos de 2018 para todos los hogares que ganen menos de $ 80.000</h2>
            </div>
          </div>
        </div>
 
        <div class="infobox text-infobox infobox-close">
          <div class="title">
-           <p>In 2018, the combined federal tax revenue among all US households earning under $80,000 per year <a href="https://taxfoundation.org/summary-latest-federal-income-tax-data-2018-update/" target="_blank">was around $200 billion.</a> This money&#8212;taken entirely from poor and middle class Americans&#8212;could be returned for a tiny fraction of the wealth controlled by the .0001%.</p>
+           <p>En 2018, los ingresos fiscales federales combinados entre todos los hogares de EE. UU. que ganaron menos de $ 80.000 dólares por año fueron de alrededor de <a href="https://taxfoundation.org/summary-latest-federal-income-tax-data-2018-update/" target="_blank">$ 200 mil millones de dólares</a>. Este dinero, tomado íntegramente de estadounidenses pobres y de clase media, podría ser devuelto por una pequeña fracción de la riqueza controlada por el 0,0001%.
+             </p>
          </div>
        </div>
 
         <div class="infobox text-infobox infobox-half">
-          <h2 class="title what-could-we-do">What could we do with 8% of this money?</h2>
+          <h2 class="title what-could-we-do">¿Qué podríamos hacer con el 8% de este dinero?</h2>
         </div>
 
         <div class="infobox infobox-quarter flex">
@@ -581,21 +623,25 @@
             <span class="label">8%</span>
             <div class="dotted-line"></div>
             <div class="description">
-              <h2>Provide clean drinking water and toilet access to every human on earth.</h2>
+              <h2>Proporcionar agua potable y acceso al baño a todos los humanos en la tierra.</h2>
             </div>
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="title">
-            <p>Around <a href="https://www.who.int/news-room/detail/12-07-2017-2-1-billion-people-lack-safe-drinking-water-at-home-more-than-twice-as-many-lack-safe-sanitation" target="_blank">844 million people</a> have no access to clean water of any kind. About the same number have no access to a toilet or latrine of any kind, and therefore defecate in the open.</p>
+            <p>Alrededor de <a href="https://www.who.int/news-room/detail/12-07-2017-2-1-billion-people-lack-safe-drinking-water-at-home-more-than-twice-as-many-lack-safe-sanitation" target="_blank">844 millones de personas</a> no
+            tienen acceso a agua limpia de ningún
+            tipo. Aproximadamente el mismo número no tiene acceso a un
+            inodoro o letrina de ningún tipo y, por lo tanto, defeca
+            al aire libre.
           </div>
         </div>
 
         <div class="infobox text-infobox infobox-close">
           <div class="worldchart">
             <img src="img/no_clean_water.png"/>
-            <h2 class="description">No clean water</h2>
+            <h2 class="description">Sin agua limpia</h2>
           </div>
         </div>
 
